src/objects/Simulation__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biomedicine</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoLAB_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoLAB Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Simulations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compound__c</fullName>
        <label>Compound</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_HCPs__c</fullName>
        <description>Number of HCPs</description>
        <inlineHelpText>Number of HCPs</inlineHelpText>
        <label>Number of HCPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Patients__c</fullName>
        <description>Number of Patients</description>
        <inlineHelpText>Number of Patients</inlineHelpText>
        <label>Number of Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Simulation_Notes__c</fullName>
        <description>Roll Up to Calculate Number of Simulation Notes</description>
        <label>Number of Simulation Notes</label>
        <summarizedField>Boards__c.Number_of_Simulation_Notes_TF__c</summarizedField>
        <summaryForeignKey>Boards__c.Simulation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Simulation_Date__c</fullName>
        <label>Simulation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Simulation_ID__c</fullName>
        <displayFormat>S-{0000}</displayFormat>
        <label>Simulation ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Simulation_Type__c</fullName>
        <inlineHelpText>Activity Type</inlineHelpText>
        <label>Simulation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Alias__c</fullName>
        <label>Trial Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Simulation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Simulation_ID__c</columns>
        <columns>NAME</columns>
        <columns>Simulation_Date__c</columns>
        <columns>Compound__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Trial_Alias__c</columns>
        <columns>CoLAB_Lead__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Custom_Filter</fullName>
        <columns>Simulation_ID__c</columns>
        <columns>NAME</columns>
        <columns>Simulation_Date__c</columns>
        <columns>Compound__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Trial_Alias__c</columns>
        <columns>CoLAB_Lead__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>JPCJ</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Oncology</value>
        </filters>
        <label>Custom_Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Simulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>